Fix Tree Menu Items sometimes misaligned in different columns.

--- a/public/style.css
+++ b/public/style.css
@@ -427,6 +427,10 @@ div.invisible {
     max-height: 80vh;
 }
 
+.medium-height {
+    height: 26px;
+}
+
 .relative {
     position: relative;
 }
